; ModuleID = '/home/carl/AnghaBench/freebsd/sys/vm/extr_vm_page.c_vm_page_dequeue_deferred.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/vm/extr_vm_page.c_vm_page_dequeue_deferred.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@PQ_NONE = common dso_local global i32 0, align 4
@PGA_DEQUEUE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @vm_page_dequeue_deferred(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %4 = load i32, i32* %2, align 4
  %5 = call i32 @vm_page_assert_locked(i32 %4)
  %6 = load i32, i32* %2, align 4
  %7 = call i32 @vm_page_queue(i32 %6)
  store i32 %7, i32* %3, align 4
  %8 = load i32, i32* @PQ_NONE, align 4
  %9 = icmp eq i32 %7, %8
  br i1 %9, label %10, label %11

10:                                               ; preds = %1
  br label %23

11:                                               ; preds = %1
  %12 = load i32, i32* %2, align 4
  %13 = load i32, i32* %3, align 4
  %14 = load i32, i32* %3, align 4
  %15 = load i32, i32* @PGA_DEQUEUE, align 4
  %16 = load i32, i32* @PGA_DEQUEUE, align 4
  %17 = call i64 @vm_page_pqstate_cmpset(i32 %12, i32 %13, i32 %14, i32 %15, i32 %16)
  %18 = icmp ne i64 %17, 0
  br i1 %18, label %19, label %23

19:                                               ; preds = %11
  %20 = load i32, i32* %2, align 4
  %21 = load i32, i32* %3, align 4
  %22 = call i32 @vm_page_pqbatch_submit(i32 %20, i32 %21)
  br label %23

23:                                               ; preds = %10, %19, %11
  ret void
}

declare dso_local i32 @vm_page_assert_locked(i32) #1

declare dso_local i32 @vm_page_queue(i32) #1

declare dso_local i64 @vm_page_pqstate_cmpset(i32, i32, i32, i32, i32) #1

declare dso_local i32 @vm_page_pqbatch_submit(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
